[tool.poetry]
name = "elt-with-dlt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyterlab = "^4.2.5"
dlt = {extras = ["duckdb"], version = "^1.2.0"}
streamlit = "^1.39.0"
lib = { path = "lib", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
